# Nepali-news-portal-kbd

./: .gitignore  .pyup.yml  Dockerfile  Makefile  Pipfile  README.md  bare_requirements.txt  kantipur_daily_cache.csv  kathmadupost_cache.csv  logger_file.py  main.py  manage.py  postgres_requirements.txt  pyproject.toml  req.txt  requirements.txt  requirements_dev.txt  run.py  setupenv.py  sqlite_requirements.txt  start.py  template_secrets.json  test.py  ujyaalo_international_cache.csv
.github/workflows/: main.yml
Khabar-board/: text.txt
docs/: manual_install.md  postgres_setup.md  venv.md
flask_final/: __init__.py  config.py  forms.py  kantipur_daily.py  kantipur_daily_cache.csv  kathmadupost_cache.csv  kathmandupost.py  logger_file.py  manage.py  models.py  nagarik_international.py  routes.py  site.db  utils.py
flask_final/main/: routes.py
flask_final/news/: routes.py
flask_final/newslet/: __init__.py  kantipur_daily.py  kantipur_international.py  kathmandupost.py  models.py  nagarik_international.py  news_loader.py  routes.py  rss_news.py  top_international_news.py  utils.py
flask_final/templates/: about.html  about.html.orig  dashboard.html  dashboard.html.orig  detail_news.html  eng_national_news.html  home.html  layout.html  login.html  nep_international_news.html  nep_national_news.html  news.html  privacy_policy.html  reset_password.html  reset_password_email.html  reset_request.html  signup.html
flask_final/users/: forms.py  models.py  routes.py
migrations/versions/: 0050a65e0467_.py  f682ccb0c931_.py  f8f62ac9a5dc_.py
tests/: main.py
(+3 files in other folders)
