[tool.poetry]
name = "khabar-board"
version = "0.5"
description = ""
authors = ["hemanta212 <sharmahemanta.212@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
bcrypt = "^3.1.4"
beautifulsoup4 = "^4.6.3"
blinker = "^1.4"
bs4 = "^0.0.1"
certifi = "^2019.3.9"
cffi = "^1.11.5"
chardet = "^3.0.4"
Click = "^7.0"
Flask = "^1.0.2"
Flask-Bcrypt = "^0.7.1"
Flask-Login = "^0.4.1"
Flask-Mail = "^0.9.1"
Flask-SQLAlchemy = "^2.3.2"
Flask-WTF = "^0.14.2"
idna = "^2.7"
itsdangerous = "^1.1"
Jinja2 = "^2.10"
lxml = "^4.2.5"
MarkupSafe = "^1.1.1"
pycparser = "^2.19"
requests = "^2.21.0"
six = "^1.12.0"
SQLAlchemy = "^1.2.12"
urllib3 = "^1.23"
Werkzeug = "^0.16.0"
WTForms = "^2.2.1"


[tool.poetry.dev-dependencies]
pylint = "^2.3"
pytest = "^5.2"
autopep8 = "^1.4"
rope = "^0.14.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
